--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,7 +29,8 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 143","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 148","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇨🇦CA | 🟢 | vless | @ConfigsHUB | 5","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇯🇵JP | 🟢 | vless | @ConfigsHUB | 0","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 8","type":"vless","server":"3.16.150.236","port":4433,"udp":false,"uuid":"7fc993f5-7cd7-4485-9e6f-1f7c5160c910","tls":false,"servername":"stackoverflow.com","network":"tcp","reality-opts":{"public-key":"tZn5Tdrk045zSTbBEzGwSV_LOdCZqEwT8c85pJOK_C0","short-id":"f785b38130e64177","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 6","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -37,18 +38,6 @@ proxies:
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 7","type":"vless","server":"195.93.253.49","port":33094,"udp":false,"uuid":"6f8923d9-f812-4ca6-b93a-8f9227bf2eab","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"35JazACyPS6LcDwpGibneEeMzkzGYWf4KTG_Oqp0oBE","short-id":"29489194da0d5d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11","type":"vless","server":"31.169.124.240","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🔴 | vless | @FreakConfig | 13","type":"vless","server":"159.203.141.231","port":2053,"udp":false,"uuid":"6d5afbb4-450c-4798-91ab-71a792b487bb","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"lHqhMsZfvb_xaxQPKOyIDlaSREGM9tFWjVxl4k9aiBg","short-id":"60f78c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @flyv2ray | 1","type":"vless","server":"bfly.tuozs.ir","port":2083,"udp":false,"uuid":"de4f5606-baf6-4bc2-a715-7cfe39dda1ed","tls":false,"servername":"miro.com","network":"grpc","reality-opts":{"public-key":"tMVNburGfNg0IHRgzlmoqV22mx1GgkRe8qzBouEYY3Y","short-id":"a25aca9336","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @mehrosaboran | 2","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"738ebc1c-c44a-418e-8c2c-f9e2efe1f4fe","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @mehrosaboran | 6","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"2cd455a4-c698-42de-9830-ac628dbe2e26","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 7","type":"vless","server":"footlo.argha-v2pedia.monster","port":443,"udp":false,"uuid":"2301d419-fc86-44e0-84e5-d5aa81557c38","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia"},"reality-opts":{"public-key":"muEtUEPnEMopCqdrhYWMzzwBsAfjZ_NV1m-AnO1byxk","short-id":"da","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 11","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"e9fe302e-dbc2-4d6f-a6b2-10d718c5d47b","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 13","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"b19fb147-8ff7-465f-8525-312fd889fd73","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 14","type":"vless","server":"footlo.argha-v2pedia.monster","port":443,"udp":false,"uuid":"bd4fa3f0-ec55-4d60-8781-4ebdd3e0b8ad","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia"},"reality-opts":{"public-key":"muEtUEPnEMopCqdrhYWMzzwBsAfjZ_NV1m-AnO1byxk","short-id":"da","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 15","type":"vless","server":"public.alpanel.top","port":1380,"udp":false,"uuid":"e6d01fda-e989-42c6-8831-d92b01f85a3e","tls":false,"servername":"www.iranserver.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"u2Xf8Og6H4iPcoYIZC8Cm8ziH2LA4ifvpHxEpp8bfUw","short-id":"4c5aaad0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 16","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"7572881e-9877-4886-9270-60cd7fa321bb","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 18","type":"vless","server":"public.alpanel.top","port":1380,"udp":false,"uuid":"58c15a7e-8111-4abb-afd2-47590085c3f4","tls":false,"servername":"www.iranserver.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"u2Xf8Og6H4iPcoYIZC8Cm8ziH2LA4ifvpHxEpp8bfUw","short-id":"4c5aaad0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 19","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"671b9a72-7c75-46b9-be82-db2734bae2fc","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 21","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"4c6451ba-6594-4d67-a8ae-4df79815a4e3","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
     type: select
@@ -77,7 +66,8 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 8'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -85,18 +75,6 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 13'
-      - '🇩🇪DE | 🟢 | vless | @flyv2ray | 1'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 7'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 11'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 13'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 14'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 15'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 16'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 18'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 19'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 21'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -125,7 +103,8 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 8'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -133,18 +112,6 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 13'
-      - '🇩🇪DE | 🟢 | vless | @flyv2ray | 1'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 7'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 11'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 13'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 14'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 15'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 16'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 18'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 19'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 21'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -172,7 +139,8 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 8'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -180,18 +148,6 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇺🇸US | 🔴 | vless | @FreakConfig | 13'
-      - '🇩🇪DE | 🟢 | vless | @flyv2ray | 1'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
-      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 7'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 11'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 13'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 14'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 15'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 16'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 18'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 19'
-      - '❔XX | 🔴 | vless | @vpn_go67 | 21'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
